minor clean-ups
* remove superfluous modifiers
* extract MappingList::toListOfEntries
* fix sonar warnings